--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations</h1>
-    <h2>This application was deployed using AWS CodeDeploy.</h2>
-    <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
+    <h1>Congratulations - Deal can be made only with 5000 QAR only</h1>
+    <h2>This deal will be valid till end of this month.</h2>
   </div>
 </body>
 </html>
